nested/bastion-server.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "bastionServerSettings": {
            "type": "object"
        },
        "apiVersions": {
            "type": "object"
        },
        "appServiceEnv": {
            "type": "object"
        } 

    },
    "variables": {
        "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', parameters('appServiceEnv').virtualNetworkName)]",
        "subnetRef": "[concat(variables('vnetId'), '/subnets/', parameters('appServiceEnv').subnetName2)]" 
    },
    "resources": [
        {
            "name": "[parameters('bastionServerSettings').bastionDiagStgAcnt]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "[parameters('apiVersions').storageApiVersion1]",
            "location": "[parameters('bastionServerSettings').location]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage",
            "properties": {}
        },
        {
            "name": "[parameters('bastionServerSettings').bastionNic]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[parameters('apiVersions').bastionApiVersion]",
            "location": "[parameters('bastionServerSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIpAddresses/', parameters('bastionServerSettings').bastionPublicIpName)]",
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('bastionServerSettings').bastionNSG)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[parameters('bastionServerSettings').bastionPrivateIP]",
                            "publicIpAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', parameters('bastionServerSettings').bastionPublicIpName)]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('bastionServerSettings').bastionNSG)]"
                }
            }
        },
        {
            "name": "[parameters('bastionServerSettings').bastionPublicIpName]",
            "type": "Microsoft.Network/publicIpAddresses",
            "apiVersion": "[parameters('apiVersions').bastionApiVersion]",
            "location": "[parameters('bastionServerSettings').location]",
            "properties": {
                "publicIpAllocationMethod": "[parameters('bastionServerSettings').publicIpAddressType]",
                "dnsSettings": {
                    "domainNameLabel": "[parameters('bastionServerSettings').bastionDnsLabelPrefix]"
                }
            }
        },
        {
            "name": "[parameters('bastionServerSettings').bastionNSG]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[parameters('apiVersions').bastionApiVersion]",
            "location": "[parameters('bastionServerSettings').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "Internet",
                            "protocol": "TCP",
                            "destinationPortRange": "3389",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "winrm",
                        "properties": {
                            "priority": 1001,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "5985",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "priority": 1002,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('bastionServerSettings').bastionVMName]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('bastionServerSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('bastionServerSettings').bastionNic)]",
                "[concat('Microsoft.Storage/storageAccounts/', parameters('bastionServerSettings').bastionDiagStgAcnt)]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[parameters('bastionServerSettings').bastionVMName]",
                    "adminUsername": "[parameters('bastionServerSettings').adminUsername]",
                    "adminPassword": "[parameters('bastionServerSettings').adminPassword]",
                    "windowsConfiguration": {
                        "provisionVmAgent": "true"
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('bastionServerSettings').bastionVMSize]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('bastionServerSettings').publisher]",
                        "offer": "[parameters('bastionServerSettings').offer]",
                        "sku": "[parameters('bastionServerSettings').sku]",
                        "version": "[parameters('bastionServerSettings').version]"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('bastionServerSettings').storageAccountType]"
                        }
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('bastionServerSettings').bastionNic)]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts', parameters('bastionServerSettings').bastionDiagStgAcnt)).primaryEndpoints['blob']]"
                    }
                }
            }
        },
         
          {
            "name": "[concat(parameters('bastionServerSettings').bastionVMName,'/CustomScriptExtension')]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "location": "[parameters('bastionServerSettings').location]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/',parameters('bastionServerSettings').bastionVMName)]"
            ],
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.8",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[parameters('bastionServerSettings').powerBIScriptUrl]"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[concat ('powershell -ExecutionPolicy Unrestricted -File powerbidesktop.ps1',' ',parameters('bastionServerSettings').powerBITemplatesUrl,' ',parameters('bastionServerSettings').powerBIDesktopUrl)]"
                }
            }
        }
    ],
    "outputs": {
        "bastionFQDN": {
            "type": "string",
            "value": "[reference(parameters('bastionServerSettings').bastionPublicIpName).dnsSettings.fqdn]"
        }
    }
}
