nested/iot-edge.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "iotEdgeServer": {
            "type": "object"
        },
        "apiVersions": {
            "type": "object"
        },
        "workspaceId": {
            "type": "string"
        },
        "workspaceKey": {
            "type": "string"
        },
        "omsSettings": {
            "type": "object"
        }
    },
    "variables": {
        "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', parameters('iotEdgeServer').virtualNetworkName)]",
        "subnetRef": "[concat(variables('vnetId'), '/subnets/', parameters('iotEdgeServer').subnetName)]"
    },
    "resources": [
        {
            "name": "[parameters('iotEdgeServer').diagnosticsStorageAccountName]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "[parameters('apiVersions').storageApiVersion]",
            "location": "[parameters('iotEdgeServer').location]",
            "properties": {
                "accountType": "[parameters('iotEdgeServer').diagnosticsStorageAccountType]"
            }
        },
        {
            "name": "[parameters('iotEdgeServer').virtualNetworkName]",
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "[parameters('apiVersions').networkApiVerion]",
            "location": "[parameters('iotEdgeServer').location]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[parameters('iotEdgeServer').addressPrefix]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[parameters('iotEdgeServer').subnetName]",
                        "properties": {
                            "addressPrefix": "[parameters('iotEdgeServer').subnetPrefix]"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('iotEdgeServer').publicIpAddressName]",
            "type": "Microsoft.Network/publicIpAddresses",
            "apiVersion": "[parameters('apiVersions').networkApiVerion]",
            "location": "[parameters('iotEdgeServer').location]",
            "properties": {
                "publicIpAllocationMethod": "[parameters('iotEdgeServer').publicIpAddressType]",
                "dnsSettings": {
                    "domainNameLabel": "[parameters('iotEdgeServer').dnsLabelPrefix]"
                }
            },
            "sku": {
                "name": "[parameters('iotEdgeServer').publicIpAddressSku]"
            }
        },
        {
            "name": "[parameters('iotEdgeServer').networkSecurityGroupName]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[parameters('apiVersions').networkApiVerion]",
            "location": "[parameters('iotEdgeServer').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "protocol": "TCP",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourceAddressPrefix": "internet",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "3389"
                        }
                    },
                    {
                        "name": "web-rule",
                        "properties": {
                          "description": "Allow WEB",
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "80",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 1001,
                          "direction": "Inbound"
                        }
                    },  
                    {
                        "name": "web-rule1",
                        "properties": {
                          "protocol": "*",
                          "sourcePortRange": "*",
                          "destinationPortRange": "80",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 1002,
                          "direction": "Outbound"
                        }
                    },  

                    {
                        "name": "HTTPS",
                        "properties": {
                            "priority": 1003,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "HTTPS1",
                        "properties": {
                            "priority": 1004,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Outbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "Modbus",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "502",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1005,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "Modbus1",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "502",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1006,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "appservice",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1200",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1007,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "appservice1",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1200",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1008,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "sqlserver",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1433",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1009,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "sqlserver1",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1433",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "winrm",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5985",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1011,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "security",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5724",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1012,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "security1",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5724",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1013,
                            "direction": "Outbound"
                        }
                    }
                ]
            },
            "resources": [
                {         
                "name": "Microsoft.Insights/service",
                "type": "providers/diagnosticSettings",
                "apiVersion": "2015-07-01",
                "dependsOn": [
                   
                        "[concat('Microsoft.Network/networkSecurityGroups/', parameters('iotEdgeServer').networkSecurityGroupName)]"
                    
                ],
                "properties": {
                    "workspaceId": "[resourceId('Microsoft.OperationalInsights/workspaces/', parameters('omsSettings').omsWorkspaceName)]",
                    "logs": [
                        {
                          "category": "NetworkSecurityGroupEvent",
                          "enabled": true,
                          "retentionPolicy": {
                            "days": 0,
                            "enabled": false
                          }
                        }
                    ],
                      "metrics": [
                        {
                          "timeGrain": "PT1M",
                          "enabled": true,
                          "retentionPolicy": {
                            "enabled": false,
                            "days": 0
                          }
                        }
                    ]
            
                }
            }
        ]
        },
        {
            "name": "[parameters('iotEdgeServer').networkInterfaceName]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[parameters('apiVersions').networkApiVerion]",
            "location": "[parameters('iotEdgeServer').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', parameters('iotEdgeServer').virtualNetworkName)]",
                "[concat('Microsoft.Network/publicIpAddresses/', parameters('iotEdgeServer').publicIpAddressName)]",
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('iotEdgeServer').networkSecurityGroupName)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIpAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', parameters('iotEdgeServer').publicIpAddressName)]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('iotEdgeServer').networkSecurityGroupName)]"
                }
            }
        },
        {
            "name": "[parameters('iotEdgeServer').virtualMachineName]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('iotEdgeServer').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('iotEdgeServer').networkInterfaceName)]",
                "[concat('Microsoft.Storage/storageAccounts/', parameters('iotEdgeServer').diagnosticsStorageAccountName)]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[parameters('iotEdgeServer').virtualMachineName]",
                    "adminUsername": "[parameters('iotEdgeServer').adminUsername]",
                    "adminPassword": "[parameters('iotEdgeServer').adminPassword]",
                    "windowsConfiguration": {
                        "provisionVmAgent": "true"
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('iotEdgeServer').virtualMachineSize]"
                },
                "storageProfile": {
                    "imageReference": {
                        "id": "[concat('/subscriptions/',parameters('iotEdgeServer').customImageSubscription,'/resourceGroups/',parameters('iotEdgeServer').customImageRG,'/providers/Microsoft.Compute/images/iotedge-image')]"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "Premium_LRS"
                        }
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('iotEdgeServer').networkInterfaceName)]"
                        }
                    ]
                },
                "licenseType": "Windows_Client",
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts', parameters('iotEdgeServer').diagnosticsStorageAccountName), '2015-06-15').primaryEndpoints['blob']]"
                    }
                }
            }
        },
        {
            "name": "[concat(parameters('iotEdgeServer').virtualMachineName,'/CustomScriptExtension')]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "location": "[parameters('iotEdgeServer').location]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/',parameters('iotEdgeServer').virtualMachineName)]"
            ],
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.8",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[parameters('iotEdgeServer').powerBIScriptUrl]"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[concat ('powershell -ExecutionPolicy Unrestricted -File powerBiInstall.ps1',' ',parameters('iotEdgeServer').powerBITemplatesUrl,' ',parameters('iotEdgeServer').powerBIDesktopUrl)]"
                }
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('iotEdgeServer').virtualMachineName,'/omsextentions')]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('iotEdgeServer').location]",
            "dependsOn": [
              "[concat('Microsoft.Compute/virtualMachines/',parameters('iotEdgeServer').virtualMachineName,'/extensions/CustomScriptExtension')]"
            ],
            "properties": {
                "publisher": "Microsoft.EnterpriseCloud.Monitoring",
                "type": "MicrosoftMonitoringAgent",
                "typeHandlerVersion": "1.0",
                "autoUpgradeMinorVersion": true,
                "settings": {
                   "workspaceId": "[parameters('workspaceId')]"
                },
                "protectedSettings": {
                    "workspaceKey": "[parameters('workspaceKey')]"
                }
            }
        }
    ],
    "outputs": {
        "IotEdgeFQDN": {
            "type": "string",
            "value": "[reference(parameters('iotEdgeServer').publicIpAddressName).dnsSettings.fqdn]"
        }
    }
}
