nested/windows-server.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "windowsServerSettings": {
            "type": "object"
        },
        "apiVersions": {
            "type": "object"
        }   
    },
    "variables": {
        "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', parameters('appServiceEnv').virtualNetworkName)]",
        "subnetRef": "[concat(variables('vnetId'), '/subnets/', parameters('appServiceEnv').subnetName2)]" 
    },
    "resources": [

        {
            "name": "[parameters('windowsServerSettings').windowsDiagStgAcnt]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "[parameters('apiVersions').storageApiVersion1]",
            "location": "[parameters('windowsServerSettings').location]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage",
            "properties": {}
        },
        {
            "name": "[parameters('windowsServerSettings').windowsNic]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[parameters('apiVersions').windowsApiVersion]",
            "location": "[parameters('windowsServerSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/publicIpAddresses/', parameters('windowsServerSettings').windowsPublicIpName)]",
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('windowsServerSettings').windowsNSG)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('subnetRef')]"
                            },
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIpAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', parameters('windowsServerSettings').windowsPublicIpName)]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('windowsServerSettings').windowsNSG)]"
                }
            }
        },
        {
            "name": "[parameters('windowsServerSettings').windowsPublicIpName]",
            "type": "Microsoft.Network/publicIpAddresses",
            "apiVersion": "[parameters('apiVersions').windowsApiVersion]",
            "location": "[parameters('windowsServerSettings').location]",
            "properties": {
                "publicIpAllocationMethod": "[parameters('windowsServerSettings').publicIpAddressType]",
                "dnsSettings": {
                    "domainNameLabel": "[parameters('windowsServerSettings').windowsDnsLabelPrefix]"
                }
            }
        },
        {
            "name": "[parameters('windowsServerSettings').windowsNSG]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[parameters('apiVersions').windowsApiVersion]",
            "location": "[parameters('windowsServerSettings').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "Internet",
                            "protocol": "TCP",
                            "destinationPortRange": "3389",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "winrm",
                        "properties": {
                            "priority": 1001,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "80",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "winrmout",
                        "properties": {
                            "priority": 1002,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "80",
                            "access": "Allow",
                            "direction": "Outbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "appservice",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1200",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1003,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "appservice1",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "1200",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1004,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "HTTPS",
                        "properties": {
                            "priority": 1005,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "HTTPSOut",
                        "properties": {
                            "priority": 1006,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Outbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "security",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5724",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1007,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "security1",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5724",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1008,
                            "direction": "Outbound"
                        }
                    },
                    {
                        "name": "winrm2",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "5985",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1009,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('windowsServerSettings').windowsVMName]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('windowsServerSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('windowsServerSettings').windowsNic)]",
                "[concat('Microsoft.Storage/storageAccounts/', parameters('windowsServerSettings').windowsDiagStgAcnt)]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[parameters('windowsServerSettings').windowsVMName]",
                    "adminUsername": "[parameters('windowsServerSettings').adminUsername]",
                    "adminPassword": "[parameters('windowsServerSettings').adminPassword]",
                    "windowsConfiguration": {
                        "provisionVmAgent": "true"
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('windowsServerSettings').windowsVMSize]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('windowsServerSettings').publisher]",
                        "offer": "[parameters('windowsServerSettings').offer]",
                        "sku": "[parameters('windowsServerSettings').sku]",
                        "version": "[parameters('windowsServerSettings').version]"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('windowsServerSettings').storageAccountType]"
                        }
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('windowsServerSettings').windowsNic)]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts', parameters('windowsServerSettings').windowsDiagStgAcnt)).primaryEndpoints['blob']]"
                    }
                }
            }
        },
         
          {
            "name": "[concat(parameters('windowsServerSettings').windowsVMName,'/CustomScriptExtension')]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "location": "[parameters('windowsServerSettings').location]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/',parameters('windowsServerSettings').windowsVMName)]"
            ],
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.8",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "[parameters('windowsServerSettings').powerBIScriptUrl]"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[concat ('powershell -ExecutionPolicy Unrestricted -File powerBiInstall1.ps1',' ',parameters('windowsServerSettings').powerBITemplatesUrl,' ',parameters('windowsServerSettings').powerBIDesktopUrl,' ',parameters('windowsServerSettings').lightSensor)]"
                }
            }
        }   
    ],
    "outputs": {
        "windowsFQDN": {
            "type": "string",
            "value": "[reference(parameters('windowsServerSettings').windowsPublicIpName).dnsSettings.fqdn]"
        }
    }
}
